# hellfire-crucible

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs  shader.wgsl
server/: Cargo.toml
server/src/: main.rs  physics.rs
shared/: Cargo.toml
shared/src/: lib.rs
