[workspace]
members = ["client", "server", "shared"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
winit = "0.30"
wgpu = "22.0"
rapier2d = { version = "0.22", features = ["serde-serialize"] }
nalgebra = "0.33"
futures-util = "0.3"
rand = "0.8"
pollster = "0.3"
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
